@@ -829,6 +829,12 @@ now been updated to point to Libera.Chat.
 
 https://lists.gnu.org/archive/html/info-gnu-emacs/2021-06/msg00000.html
 
+** MS-Windows
+
+*** Supports dark mode on Windows 10 (version 1809 and higher) and Windows 11.
+Graphical frames now use the appropriate light or dark title bar and
+scroll bars, based on the user's Windows color settings.
+
 
 * Incompatible Editing Changes in Emacs 28.1
 
